# telegram-webapp-bot

./: .gitignore  package-lock.json  package.json  pyproject.toml
.github/workflows/: azure-static-web-apps-black-meadow-07b785003.yml
public/: index.html
src/: App.js  Order.js  index.js
src/catalog/: state.js
src/components/: ProductCard.js
webapp-frontend/: package-lock.json
webapp-frontend/src/: App.js  Order.js
webapp-frontend/src/catalog/: state.js
webapp_backend/: bot.py
