[tool.poetry]
name = "webapp-backend"
version = "0.1.0"
description = ""
authors = ["Sergey Chernobrivenko <ser.n.che@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telebot = "^0.0.5"
peewee = "^3.17.5"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
